Added image saving as files and requirements

--- a/GAN.ipynb
+++ b/GAN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -39,14 +39,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "root_dir = 'icons/png32/images/'\n",
     "BATCH_SIZE = 64\n",
     "bs = BATCH_SIZE\n",
-    "num_epochs = 500"
+    "num_epochs = 500\n",
+    "z_dim = 200"
    ]
   },
   {
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,6 +175,16 @@
     "    images = G(z)\n",
     "    images = images.reshape(-1, 32, 32)\n",
     "    return images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G = Generator(200, 1024).to(device)\n",
+    "D = Discriminator(1024).to(device)"
    ]
   },
   {
@@ -7682,10 +7693,6 @@
    "source": [
     "from tqdm import tqdm\n",
     "D_losses, G_losses = [], []\n",
-    "z_dim = 200\n",
-    "G = Generator(200, 1024).to(device)\n",
-    "D = Discriminator(1024).to(device)\n",
-    "\n",
     "lr = 0.0002\n",
     "G_optimizer = optim.Adam(G.parameters(), lr=lr/4)\n",
     "D_optimizer = optim.Adam(D.parameters(), lr=lr*5)\n",
@@ -7742,10 +7749,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!mkdir ./generated/GAN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G = Generator(200, 1024).to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_generator_dict = torch.load('generator_GAN')\n",
+    "G.load_state_dict(test_generator_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images = generate_images(121)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "path = 'generated/GAN/'\n",
+    "i = 0 \n",
+    "for image in images:\n",
+    "    image = image.cpu().detach().numpy()\n",
+    "    pth = os.path.join(path, '{}.png'.format(i))\n",
+    "    plt.imsave(pth, image, cmap='gray')\n",
+    "    i += 1"
+   ]
   }
  ],
  "metadata": {
