--- a/DCGAN.ipynb
+++ b/DCGAN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,7 @@
     "import torch.nn.functional as F\n",
     "from tqdm import tqdm\n",
     "import cv2\n",
+    "from matplotlib import pyplot as plt\n",
     "\n",
     "# Local helper functions and classes\n",
     "from helpers.dataset import IconsDataset, basic_img_transform as img_transform\n",
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +334,12 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1134,10 +1140,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mkdir: cannot create directory ‘generated’: File exists\n"
+     ]
+    }
+   ],
+   "source": [
+    "!mkdir generated\n",
+    "!mkdir ./generated/DCGAN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_generator_dict = torch.load('generator_DCGAN')\n",
+    "G.load_state_dict(test_generator_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "images = generate_images(21)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.misc\n",
+    "import os\n",
+    "\n",
+    "path = 'generated/DCGAN/'\n",
+    "i = 0 \n",
+    "for image in images:\n",
+    "    image = image.cpu().detach().numpy()\n",
+    "    pth = os.path.join(path, '{}.png'.format(i))\n",
+    "    plt.imsave(pth, image, cmap='gray')\n",
+    "    i += 1"
+   ]
   },
   {
    "cell_type": "code",
