Added directory creation to each file

--- a/GAN.ipynb
+++ b/GAN.ipynb
@@ -7749,10 +7749,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mkdir: cannot create directory ‘generated’: File exists\n",
+      "mkdir: cannot create directory ‘./generated/GAN’: File exists\n"
+     ]
+    }
+   ],
    "source": [
+    "!mkdir generated\n",
     "!mkdir ./generated/GAN"
    ]
   },
